--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<h2><a href="https://github.com/Amardeep6007/WaferFaultDetection">Wafer Fault Detection Project<br />
 										(Machine Learning Project)</a></h2>
 									</header>
-									<a href="https://github.com/Amardeep6007/WaferFaultDetection" class="image fit"><img src="images/wafer_sensor.jpg" alt="" /></a>
+									<a href="https://github.com/Amardeep6007/WaferFaultDetection" class="image fit"><img src="images/Wafer_sensor.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Amardeep6007/WaferFaultDetection" class="button">View Project</a></li>
