--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Amardeep's<br />
 						Project Portfolio</h1>
-						<p>Passionate about data Science field and applied maths and hence transitioning my career from Software engineer to data scientist. Seeking opportunities where I can utilize my analytical and technical skills to solve real life problems related to analyzing a big volume of datasets to train the models and draw insights that can help with business decisions <a href="https://github.com/Amardeep6007?tab=repositories">@AmardeepKumar</a> <br />
+						<p>As a highly motivated and enthusiastic individual, I am passionate about the fields of data science and applied mathematics. I am eager to transition my career from software engineering to data science in order to leverage my analytical and technical skills in solving real-world problems through the analysis of large volumes of data. My goal is to use my expertise to derive valuable insights that drive effective business decisions and drive positive outcomes. I am excited to pursue opportunities where I can continue to learn and grow in the field, while making a meaningful impact in the world of data science. <a href="https://github.com/Amardeep6007?tab=repositories">@AmardeepKumar</a> <br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -56,7 +56,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Amardeep6007/Mushroom_Classification_internship_project">Mushroom Classification<br />
 									(Machine Learning Project)</a></h2>
-									<p>In this project, I performed data cleaning, Feature Engineering, Feature Selection and then various machine learning models were trained. Amongst all the model trained it was found that Random Forest model was giving the best accuracy with 99.5%</p>
+									<p>Performed data cleaning , Feature Engineering, Feature selection and developed various machine learning models and eventually found that the Random forest model was providing the best accuracy among all the model trained with 99.5% accuracy. This project was dockerized and deployed on AWS EC2 instance using Elastic Container Registry(ECR) instance. CI/CD pipeline was implemented using Github Actions .</p>
 								</header>
 								<a href="https://github.com/Amardeep6007/Mushroom_Classification_internship_project" class="image main"><img src="images/mushroom_1.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -72,7 +72,11 @@
 										(Machine Learning Project)</a></h2>
 									</header>
 									<a href="https://github.com/Amardeep6007/aps-fault-detection" class="image fit"><img src="images/air_pressure_sensor.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>The Air Pressure System Fault Detection Project is a machine learning project that uses a XGBoost classifier model to predict faults in a vehicle's air pressure system. The model is trained on sensor data stored in MongoDB Atlas and predictions are made through batch predictions. The data was cleaned, outliers handled, and missing values imputed before training the model, resulting in an accuracy of 99.6% with a cost of 2950. The project includes a continuous training pipeline, model evaluation, and batch prediction using Apache Airflow scheduler. The code is deployed in AWS using EC2 instances, ECR, and S3 Bucket, and is dockerized with CI/CD pipeline implemented through Github Actions. The predictions help the client reduce costs due to unnecessary repairs.
+
+
+
+</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Amardeep6007/aps-fault-detection" class="button">View Project</a></li>
 									</ul>
@@ -83,7 +87,7 @@
 										(Machine Learning Project)</a></h2>
 									</header>
 									<a href="https://github.com/Amardeep6007/WaferFaultDetection" class="image fit"><img src="images/Wafer_sensor.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Designed and developed scalable end to end machine learning pipeline using mlops and dvc; and deployed it on Heroku using Docker and CircleCI. Collected the data from the client and performed data cleaning, did feature engineering and feature selection.Developed model pipeline that stores the validated data into the sql lite database and later from the database , the data was exported into csv file format so that we can train the model on the filtered data. Also developed an entire website system in which we can provide path for the test data and then predict the result.Version control system was also used in this project. This project was dockerized so that it can run independent of the Operating System. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Amardeep6007/WaferFaultDetection" class="button">View Project</a></li>
 									</ul>
@@ -94,7 +98,7 @@
 										(Power BI Project)</a></h2>
 									</header>
 									<a href="https://github.com/Amardeep6007/Atlix-Hardware-Sales_Insights_PowerBI" class="image fit"><img src="images/Power_bi_project.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Atlix hardware is hardware company located in Ahmedabad, Gujarat that deals with selling the Hardware component. The data was imported in power BI and performed ETL to clean up the dirty records.I have analysed the data using MYSQL. Later this data was pulled in power BI for further ETL.Prepared data model for above database .Here star Schema.Used SQL to perform various analysis such as sales growth in services and parts. SLA’s for service orders, detected inefficiencies in their sales and marketing process. Used Power BI for plotting various trends.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Amardeep6007/Atlix-Hardware-Sales_Insights_PowerBI" class="button">View Project</a></li>
 									</ul>
