--- a/index.html
+++ b/index.html
@@ -111,7 +111,17 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/Amardeep6007/FlipkartScraper" class="image fit"><img src="images/flipkart_1.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Web scraping is a technique for extracting data from websites. The purpose of web scraping can vary widely, but some common uses include:
+
+Data collection: Web scraping can be used to gather large amounts of data from websites, which can then be used for various purposes such as research, analysis, or creating a dataset for machine learning models.
+
+Price comparison: Web scraping can be used to compare prices of products across different websites, which can help consumers find the best deals.
+
+Lead generation: Web scraping can be used to gather contact information such as emails and phone numbers for lead generation purposes.
+
+Sentiment analysis: Web scraping can be used to gather data from social media platforms to analyze the sentiment of public opinion on a particular topic.
+
+News aggregation: Web scraping can be used to gather news articles from multiple websites and aggregate them in one place. This project demonstrate how to scrape product information from Flipkart using Python and the Beautiful Soup library </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Amardeep6007/FlipkartScraper" class="button">View Project</a></li>
 									</ul>
